<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pashssh.weather.ui.viewModels.WeatherViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_mostly_cloudy"
        android:backgroundTintMode="multiply"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="pin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="1.3">

            <TextView
                style="@style/TextViewApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.data.temperature}"
                android:textAlignment="center"
                android:textSize="50sp"
                tools:text="+5" />

            <TextView
                style="@style/TextViewApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.data.feelsLike}"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:text="+5" />

            <TextView
                style="@style/TextViewApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.data.dayTemp}"
                android:textAlignment="center"
                tools:text="+5 / +8" />

            <TextView
                style="@style/TextViewApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.data.description}"
                android:textAlignment="center"
                tools:text="облачно" />
        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/forecast_weather_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                tools:context=".ui.fragments.WeatherFragment">

                <View
                    android:id="@+id/separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C3C3C3" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourly_weather_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:listHourly="@{viewModel.data.listWeatherHourly}"
                    tools:listitem="@layout/item_hourly_view" />

                <View
                    android:id="@+id/separator2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#C3C3C3" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_weather_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:listDaily="@{viewModel.data.listWeatherDaily}"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_daily_view" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextViewApp"
                        android:layout_column="1"
                        android:layout_margin="16dp"
                        android:text="@string/comfort" />

                    <com.pashssh.weather.customView.ArcProgress
                        android:id="@+id/wind_progress"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_row="2"
                        android:layout_column="1"
                        android:layout_margin="16dp" />

                    <LinearLayout
                        android:layout_row="2"
                        android:layout_column="2"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@{@string/feels_like + ' ' + viewModel.data.feelsLike}"
                            android:textSize="14sp"
                            tools:text="@string/feels_like" />

                        <TextView
                            style="@style/TextViewApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@string/uvi + ' ' + viewModel.data.uvi}"
                            android:textSize="14sp"
                            tools:text="@string/uvi" />

                    </LinearLayout>

                    <TextView
                        style="@style/TextViewApp"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:layout_margin="16dp"
                        android:text="@string/wind" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_row="4"
                        android:layout_column="1"
                        android:layout_margin="16dp" />

                    <LinearLayout
                        android:layout_row="4"
                        android:layout_column="2"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewApp"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:text="@{@string/wind_deg + ' ' + viewModel.data.windDeg}"
                            android:textSize="14sp"
                            tools:text="@string/wind_deg" />

                        <TextView
                            style="@style/TextViewApp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/wind_speed + ' ' + viewModel.data.windSpeed + ' ' + @string/wind_speed_value}"
                            android:textSize="14sp"
                            tools:text="@string/wind_speed" />
                    </LinearLayout>
                </GridLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="16dp"
                    android:src="@android:drawable/ic_menu_add" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</layout>
